--- a/conf.yaml
+++ b/conf.yaml
@@ -8,7 +8,7 @@
 #     marge_json_path:  请填写网络地址的json文件，用于合并，不带空格！！！
 spider_settings:
   enable: true
-  json_url: "https://github.com/ChiyoYuki/chiyoyuki.github.io/blob/main/public/friend.json"
+  json_url: "https://raw.githubusercontent.com/ChiyoYuki/chiyoyuki.github.io/refs/heads/main/public/friend.json"
   article_count: 5
   merge_result:
     enable: false
